/public/ renamed to /static/

--- a/static/index.html
+++ b/static/index.html
@@ -4,25 +4,25 @@
     <title>KITTENS are on the WAY students rating</title>
     <meta charset="utf-8"/>
     <meta name="author" content="0@39.yt (Yurij Mikhalevich)"/>
-    <link rel="stylesheet" href="/public/libs/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/public/libs/bootstrap/dist/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="/public/css/main.css"/>
-    <script src="/public/libs/jquery/dist/jquery.min.js"></script>
-    <script src="/public/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/public/libs/angularjs/angular.min.js"></script>
+    <link rel="stylesheet" href="/static/libs/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/static/libs/bootstrap/dist/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="/static/css/main.css"/>
+    <script src="/static/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/static/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/static/libs/angularjs/angular.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/public/js/socket.js"></script>
-    <script src="/public/js/app.js"></script>
-    <script src="/public/js/controllers/authorization.js"></script>
-    <script src="/public/js/controllers/students.js"></script>
-    <script src="/public/js/controllers/events.js"></script>
+    <script src="/static/js/socket.js"></script>
+    <script src="/static/js/app.js"></script>
+    <script src="/static/js/controllers/authorization.js"></script>
+    <script src="/static/js/controllers/students.js"></script>
+    <script src="/static/js/controllers/events.js"></script>
 </head>
 <body>
 <div class="container">
     <div class="row">
         <div class="col-md-4">
             <header>
-                <a href="/"><img id="logo" src="/public/images/kittens.png"/></a>
+                <a href="/"><img id="logo" src="/static/images/kittens.png"/></a>
                 <hgroup>
                     <h1><a href="/"><strong>KITTENS</strong> are on the <strong>WAY</strong></a></h1>
                     <h2><strong>Cat, LLC</strong> & <strong>Inway.com</strong>
@@ -44,21 +44,21 @@
                     </form>
                 </div>
                 <div id="logos">
-                    <img id="cat-logo" src="/public/images/cat.png"/>
-                    <img id="inway-logo" src="/public/images/inway.png"/>
+                    <img id="cat-logo" src="/static/images/cat.png"/>
+                    <img id="inway-logo" src="/static/images/inway.png"/>
                 </div>
             </header>
         </div>
         <div class="col-md-4">
             <div id="studentsBlock" class="listBlock">
                 <h3>Students rating</h3>
-                <div id="students" data-ng-include="'/public/html/studentslist.html'"></div>
+                <div id="students" data-ng-include="'/static/html/studentslist.html'"></div>
             </div>
         </div>
         <div class="col-md-4">
             <div id="eventsBlock" class="listBlock">
                 <h3>Events</h3>
-                <div id="events" data-ng-include="'/public/html/eventslist.html'"></div>
+                <div id="events" data-ng-include="'/static/html/eventslist.html'"></div>
             </div>
         </div>
     </div>
