--- a/static/html/createevent.html
+++ b/static/html/createevent.html
@@ -1,15 +1,25 @@
-<div data-ng-controller="Events" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div data-ng-controller="Events" class="modal fade" id="myModal" tabindex="-1"
+     role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <input type="text" class="modal-title" id="myModalLabel" data-ng-model="title"/>
-            </div>
-            <textarea class="modal-body" data-ng-model="description"></textarea>
-            <div class="modal-footer">
-                <input type="date" data-ng-model="date"/>
-                <button data-ng-click="add()">Save</button>
-            </div>
+            <form data-ng-submit="add()">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <span class="form-inline">
+                        <input type="text" class="form-control" placeholder="New event name&hellip;"
+                               id="myModalLabel" required data-ng-model="title"/>
+                        <input type="date" required="true" class="form-control" data-ng-model="date"/>
+                    </span>
+                </div>
+                <div class="modal-body">
+                    <textarea class="form-control" rows="4" required
+                              placeholder="New event description&hellip;"
+                              data-ng-model="description"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-default">Save</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
