--- a/static/html/participantmodal.html
+++ b/static/html/participantmodal.html
@@ -3,7 +3,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">{{name}}</h4>
+                <span class="badge modal-header-badge">{{rating}}</span>
+                <h4 class="modal-title cropped" id="myModalLabel">{{name}}</h4>
             </div>
             <div class="modal-body">
                 <div class="panel panel-default"
