--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-ng-app="main">
+<html x-ng-app="main">
 <head>
     <title>Simple Rating</title>
     <meta charset="utf-8"/>
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/main.css"/>
     <script src="/static/libs/jquery/dist/jquery.min.js"></script>
     <script src="/static/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/static/libs/bootbox/bootbox.js"></script>
     <script src="/static/libs/angularjs/angular.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/socket.js"></script>
@@ -39,9 +40,9 @@
                         test@test.ch
                     </a>
                 </div>
-                <div id="authorizationBlock" data-ng-controller="Authorization">
-                    <form data-ng-submit="authorize()">
-                        <input type="password" data-ng-model="secret"
+                <div id="authorizationBlock" x-ng-controller="Authorization">
+                    <form x-ng-submit="authorize()">
+                        <input type="password" x-ng-model="secret"
                                placeholder="tell me a secret"
                                required/>
                     </form>
@@ -51,13 +52,13 @@
         <div class="col-md-4">
             <div id="participantsBlock" class="listBlock">
                 <h3>Participants</h3>
-                <div id="participants" data-ng-include="'/static/html/participantslist.html'"></div>
+                <div id="participants" x-ng-include="'/static/html/participantslist.html'"></div>
             </div>
         </div>
         <div class="col-md-4">
             <div id="eventsBlock" class="listBlock">
                 <h3>Events</h3>
-                <div id="events" data-ng-include="'/static/html/eventslist.html'"></div>
+                <div id="events" x-ng-include="'/static/html/eventslist.html'"></div>
             </div>
         </div>
     </div>
